feat: all working, change parameters in .JSON to run

--- a/TP1/src/main/resources/config.json
+++ b/TP1/src/main/resources/config.json
@@ -1,5 +1,5 @@
 {
-  "map": 1,
-  "searchMethod": "a_star",
-  "heuristic": "h1"
+  "map": 3,
+  "searchMethod": "ida_star",
+  "heuristic": "h2"
 }
