--- a/TP2/config.json
+++ b/TP2/config.json
@@ -2,6 +2,7 @@
     "role": "archer",
     "population": 3000,
     "parentSize": 1800,
+    "path": "../../../fulldata/",	
     "selectionSize": 1200
     "chosenParentSelection": {
       "parent1": "universal",
@@ -16,8 +17,8 @@
       "p_m": 0.6,
     },
     "chosenSubjectSelection": {
-      "subject1": "roulette",
-      "subject2": "ranking",
+      "subject1": "boltzmann",
+      "subject2": "boltzmann",
       "b": 0.5,
       "fill": "fillAll"
     },
