--- a/TP2/recomendedConfig1.json
+++ b/TP2/recomendedConfig1.json
@@ -1,5 +1,5 @@
 {
-    "role": "warrior",
+    "role": "archer",
     "population": 3000,
     "parentSize": 1800,
     "path": "C:\\Users\\tamyp\\OneDrive\\Desktop\\ITBA\\3ero\\SIA\\TP2\\dataset\\fulldata",	
@@ -10,7 +10,7 @@
       "a": 0.5,
     },
     "chosenCrossover": {
-      "name": "double"
+      "name": "single"
     },
     "chosenMutation": {
       "name": "gen",
@@ -18,7 +18,7 @@
     },
     "chosenSubjectSelection": {
       "subject1": "elite",
-      "subject2": "dTournament",
+      "subject2": "ranking",
       "b": 0.5,
       "fill": "fillAll"
     },
@@ -35,7 +35,7 @@
           "threshold": 0.6,
       },
       "dTournament": {
-          "threshold": 30,
+          "threshold": 60,
       },
     },
 
