--- a/TP2/recomendedConfig1.json
+++ b/TP2/recomendedConfig1.json
@@ -2,7 +2,7 @@
     "role": "archer",
     "population": 3000,
     "parentSize": 1800,
-    "path": "C:\\Users\\tamyp\\OneDrive\\Desktop\\ITBA\\3ero\\SIA\\TP2\\dataset\\fulldata",	
+    "path": "..\dataset",	
     "selectionSize": 1200
     "chosenParentSelection": {
       "parent1": "universal",
