--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,15 @@ TP3/Perceptron/*.iml
 TP3/Perceptron/target/
 TP3/.idea
 TP3/*.iml
+
+TP3/EJ1/.idea
+TP3/EJ1/*.iml
+TP3/EJ1/target/
+
+TP3/EJ2/.idea
+TP3/EJ2/*.iml
+TP3/EJ2/target/
+
+TP3/EJ3/.idea
+TP3/EJ3/*.iml
+TP3/EJ3/target/
