--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,11 @@ TP3/EJ2/target/
 TP3/EJ3/.idea
 TP3/EJ3/*.iml
 TP3/EJ3/target/
+
+TP4/EJ1/.idea
+TP4/EJ1/*.iml
+TP4/EJ1/target/
+
+TP4/EJ2/.idea
+TP4/EJ2/*.iml
+TP4/EJ2/target/
